Fix context menu by bumping z-index. Sigh.

--- a/nde/app.css
+++ b/nde/app.css
@@ -12,5 +12,5 @@ article {
   height: 100%;
 }
 .react-contextmenu--visible {
-  z-index: 1;
+  z-index: 10;
 }
